Add form validation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3>Add Book</h3>
         <input type="text" name="book_title" id="input-title" placeholder="Title*" required>
         <input type="text" name="book_author" id="input-author" placeholder="Author*" required>
-        <input type="text" name="book_year" id="input-year" placeholder="Year*" required>
+        <input type="number" name="book_year" id="input-year" placeholder="Year*" required>
         <input type="text" name="book_pages" id="input-pages" placeholder="Pages*" required>
         <label for="input-status" class="checkbox-container">Have you read it?
           <input type="checkbox" class="checkbox" name="isRead" id="input-status">
